--- a/po/es.po
+++ b/po/es.po
@@ -3,13 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Eddy Alegria <eddy@endlessm.com>, 2014
+# Roddy Shuler <roddy@endlessm.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: eos-gates\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-09-29 21:58-0700\n"
-"PO-Revision-Date: 2014-09-30 05:02+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2014-10-06 14:39-0700\n"
+"PO-Revision-Date: 2014-10-06 21:45+0000\n"
+"Last-Translator: Roddy Shuler <roddy@endlessm.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/eos-gates/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,40 +22,36 @@ msgstr ""
 #: ../src/eos_gates.js:68
 #, c-format
 msgid "%s is unsupported"
-msgstr ""
+msgstr "%s no es soportado"
 
-#: ../src/eos_gates.js:98
-msgid "We're working on it, though!"
-msgstr ""
-
-#: ../src/eos_gates.js:106
+#: ../src/eos_gates.js:101
 msgid ""
 "In the meantime, you can install applications from our <a href='endlessm-app"
 "://eos-app-store'>App Store</a>."
-msgstr ""
+msgstr "Mientras tanto, puedes instalar programas desde nuestra <a href='endlessm-app://eos-app-store'>Tienda de Programas</a>."
 
-#: ../src/eos_gates.js:117
+#: ../src/eos_gates.js:112
 msgid "OK"
-msgstr ""
+msgstr "Aceptar"
 
 #: ../src/eos_gates_windows.js:80
 #, c-format
-msgid "Sorry, you can't run <b>%s</b> on Endless yet."
-msgstr ""
+msgid "Sorry, you can't run <b>%s</b> on Endless."
+msgstr "Lo sentimos, no puedes ejecutar <b>%s</b> en Endless."
 
 #: ../data/com.endlessm.Gates.Windows.desktop.in.in.h:1
 msgid "Launch Windows Application"
-msgstr ""
+msgstr "Ejecutar una aplicación de Windows"
 
 #: ../data/com.endlessm.Gates.Windows.desktop.in.in.h:2
 msgid "Launch Windows Applications"
-msgstr ""
+msgstr "Ejecutar aplicaciones de Windows"
 
 #: ../src/eos_gates_linux_package.js:28
 #, c-format
-msgid "Sorry, you can't install <b>%s</b> on Endless yet."
-msgstr ""
+msgid "Sorry, you can't install <b>%s</b> on Endless."
+msgstr "Lo sentimos, no puedes instalar <b>%s</b> en Endless."
 
 #: ../data/com.endlessm.Gates.LinuxPackage.desktop.in.in.h:1
 msgid "Install Linux Applications"
-msgstr ""
+msgstr "Instalar aplicaciones de Linux"
