--- a/po/ar.po
+++ b/po/ar.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: eos-gates\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-10-06 14:39-0700\n"
-"PO-Revision-Date: 2014-10-06 21:44+0000\n"
+"POT-Creation-Date: 2014-10-08 21:00-0700\n"
+"PO-Revision-Date: 2014-10-09 04:01+0000\n"
 "Last-Translator: Roddy Shuler <roddy@endlessm.com>\n"
 "Language-Team: Arabic (http://www.transifex.com/projects/p/eos-gates/language/ar/)\n"
 "MIME-Version: 1.0\n"
@@ -24,8 +24,8 @@ msgstr ""
 
 #: ../src/eos_gates.js:101
 msgid ""
-"In the meantime, you can install applications from our <a href='endlessm-app"
-"://eos-app-store'>App Store</a>."
+"You can install applications from our <a href='endlessm-app://eos-app-"
+"store'>App Store</a>."
 msgstr ""
 
 #: ../src/eos_gates.js:112
