--- a/po/eos-gates.pot
+++ b/po/eos-gates.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-10-06 14:39-0700\n"
+"POT-Creation-Date: 2014-10-08 21:00-0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -24,8 +24,8 @@ msgstr ""
 
 #: ../src/eos_gates.js:101
 msgid ""
-"In the meantime, you can install applications from our <a href='endlessm-"
-"app://eos-app-store'>App Store</a>."
+"You can install applications from our <a href='endlessm-app://eos-app-"
+"store'>App Store</a>."
 msgstr ""
 
 #: ../src/eos_gates.js:112
