Arabic translations from Transifex
[endlessm/eos-shell#4032]

--- a/po/ar.po
+++ b/po/ar.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: eos-gates\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-10-08 21:00-0700\n"
-"PO-Revision-Date: 2014-10-09 04:01+0000\n"
+"PO-Revision-Date: 2014-10-22 07:26+0000\n"
 "Last-Translator: Roddy Shuler <roddy@endlessm.com>\n"
 "Language-Team: Arabic (http://www.transifex.com/projects/p/eos-gates/language/ar/)\n"
 "MIME-Version: 1.0\n"
@@ -20,36 +20,36 @@ msgstr ""
 #: ../src/eos_gates.js:68
 #, c-format
 msgid "%s is unsupported"
-msgstr ""
+msgstr "%s غير مدعوم"
 
 #: ../src/eos_gates.js:101
 msgid ""
 "You can install applications from our <a href='endlessm-app://eos-app-"
 "store'>App Store</a>."
-msgstr ""
+msgstr "يمكنك تنصيب التطبيقات من <a href='endlessm-app://eos-app-store'>متجر التطبيقات</a> خاصتنا."
 
 #: ../src/eos_gates.js:112
 msgid "OK"
-msgstr ""
+msgstr "موافق"
 
 #: ../src/eos_gates_windows.js:80
 #, c-format
 msgid "Sorry, you can't run <b>%s</b> on Endless."
-msgstr ""
+msgstr "عذراً، فلا يمكنك تشغيل <b>%s</b> على Endless."
 
 #: ../data/com.endlessm.Gates.Windows.desktop.in.in.h:1
 msgid "Launch Windows Application"
-msgstr ""
+msgstr "إطلاق تطبيق Windows"
 
 #: ../data/com.endlessm.Gates.Windows.desktop.in.in.h:2
 msgid "Launch Windows Applications"
-msgstr ""
+msgstr "إطلاق تطبيقات Windows"
 
 #: ../src/eos_gates_linux_package.js:28
 #, c-format
 msgid "Sorry, you can't install <b>%s</b> on Endless."
-msgstr ""
+msgstr "عُذراً، فليس بإمكانك تنصيب <b>%s</b> على Endless."
 
 #: ../data/com.endlessm.Gates.LinuxPackage.desktop.in.in.h:1
 msgid "Install Linux Applications"
-msgstr ""
+msgstr "تنصيب تطبيقات Linux"
