--- a/po/pt.po
+++ b/po/pt.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Silva <michele@endlessm.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: eos-gates\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-10-08 21:00-0700\n"
-"PO-Revision-Date: 2014-10-09 04:01+0000\n"
-"Last-Translator: Roddy Shuler <roddy@endlessm.com>\n"
+"PO-Revision-Date: 2014-10-29 19:35+0000\n"
+"Last-Translator: Silva <michele@endlessm.com>\n"
 "Language-Team: Portuguese (http://www.transifex.com/projects/p/eos-gates/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,22 +21,22 @@ msgstr ""
 #: ../src/eos_gates.js:68
 #, c-format
 msgid "%s is unsupported"
-msgstr ""
+msgstr "%s não é suportado"
 
 #: ../src/eos_gates.js:101
 msgid ""
 "You can install applications from our <a href='endlessm-app://eos-app-"
 "store'>App Store</a>."
-msgstr ""
+msgstr "Você pode instalar programas da nossa <a href='endlessm-app://eos-app-store'>Central de Programas</a>."
 
 #: ../src/eos_gates.js:112
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: ../src/eos_gates_windows.js:80
 #, c-format
 msgid "Sorry, you can't run <b>%s</b> on Endless."
-msgstr ""
+msgstr "Desculpe, você não pode executar <b>%s</b> no Endless."
 
 #: ../data/com.endlessm.Gates.Windows.desktop.in.in.h:1
 msgid "Launch Windows Application"
@@ -48,7 +49,7 @@ msgstr ""
 #: ../src/eos_gates_linux_package.js:28
 #, c-format
 msgid "Sorry, you can't install <b>%s</b> on Endless."
-msgstr ""
+msgstr "Desculpe, você não pode instalar <b>%s</b> no Endless. "
 
 #: ../data/com.endlessm.Gates.LinuxPackage.desktop.in.in.h:1
 msgid "Install Linux Applications"
