--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: eos-gates\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-19 01:43+0000\n"
-"PO-Revision-Date: 2014-12-23 10:19+0000\n"
-"Last-Translator: Richard Vignais\n"
-"Language-Team: Portuguese (http://www.transifex.com/projects/p/eos-gates/language/pt/)\n"
+"PO-Revision-Date: 2015-05-19 22:56+0000\n"
+"Last-Translator: Roddy Shuler <roddy@endlessm.com>\n"
+"Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/eos-gates/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: pt_BR\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: ../src/eos_gates.js:68
 #, javascript-format
