--- a/po/eos-gates.pot
+++ b/po/eos-gates.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-08-02 13:51+0100\n"
+"POT-Creation-Date: 2017-08-02 11:14-0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,6 +16,18 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+#: ../data/com.endlessm.Gates.LinuxPackage.desktop.in.in.h:1
+msgid "Install Linux Applications"
+msgstr ""
+
+#: ../data/com.endlessm.Gates.Windows.desktop.in.in.h:1
+msgid "Launch Windows Application"
+msgstr ""
+
+#: ../data/com.endlessm.Gates.Windows.desktop.in.in.h:2
+msgid "Launch Windows Applications"
+msgstr ""
 
 #: ../src/eos_gates.js:59
 msgid "OK"
@@ -55,26 +67,14 @@ msgstr ""
 msgid "%s is unsupported"
 msgstr ""
 
-#: ../src/eos_gates_windows.js:76
-#, javascript-format
-msgid "Sorry, you can't run %s on Endless."
-msgstr ""
-
-#: ../data/com.endlessm.Gates.Windows.desktop.in.in.h:1
-msgid "Launch Windows Application"
-msgstr ""
-
-#: ../data/com.endlessm.Gates.Windows.desktop.in.in.h:2
-msgid "Launch Windows Applications"
-msgstr ""
-
 #: ../src/eos_gates_linux_package.js:23
 #, javascript-format
 msgid "Sorry, you can't install %s on Endless."
 msgstr ""
 
-#: ../data/com.endlessm.Gates.LinuxPackage.desktop.in.in.h:1
-msgid "Install Linux Applications"
+#: ../src/eos_gates_windows.js:76
+#, javascript-format
+msgid "Sorry, you can't run %s on Endless."
 msgstr ""
 
 #: ../src/replacements.js:9
@@ -86,11 +86,14 @@ msgid "You are already running Endless OS from live media"
 msgstr ""
 
 #: ../src/replacements.js:19
-msgid "Endless OS Installer"
+msgid "Reformat with Endless OS"
 msgstr ""
 
 #: ../src/replacements.js:20
-msgid "You can install Endless OS by running the Endless OS Installer."
+msgid ""
+"You can reformat your computer with Endless OS. If you have Windows "
+"installed and want to keep it, reboot to Windows and run the Endless "
+"Installer under Windows."
 msgstr ""
 
 #: ../src/replacements.js:33 ../src/replacements.js:90
