--- a/po/es.po
+++ b/po/es.po
@@ -6,14 +6,15 @@
 # Eddy Alegria <eddy@endlessm.com>, 2014
 # Joel Gil León <joel@endlessm.com>, 2014
 # Joel Gil León <joel@endlessm.com>, 2014
+# Nuritzi Sanchez <ns@endlessm.com>, 2017
 # Roddy Shuler <roddy@endlessm.com>, 2014,2017
 msgid ""
 msgstr ""
 "Project-Id-Version: eos-gates\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-02 11:14-0700\n"
-"PO-Revision-Date: 2017-08-03 17:45+0000\n"
-"Last-Translator: Roddy Shuler <roddy@endlessm.com>\n"
+"PO-Revision-Date: 2017-09-07 01:26+0000\n"
+"Last-Translator: Nuritzi Sanchez <ns@endlessm.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/endless-mobile-inc/eos-gates/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -59,12 +60,12 @@ msgstr "Centro de programas"
 #: ../src/eos_gates.js:144
 #, javascript-format
 msgid "However, you already have %s installed"
-msgstr ""
+msgstr "Sin embargo, ya tienes %s instalado"
 
 #: ../src/eos_gates.js:146
 #, javascript-format
 msgid "However, you can install %s on the Endless App Center"
-msgstr ""
+msgstr "Sin embargo, puedes instalar %s en el Centro de Programas."
 
 #: ../src/eos_gates.js:173
 #, javascript-format
@@ -83,22 +84,22 @@ msgstr "Lo sentimos, no puedes ejecutar %s en Endless."
 
 #: ../src/replacements.js:9
 msgid "You are already running Endless OS"
-msgstr ""
+msgstr "Ya estás usando Endless OS"
 
 #: ../src/replacements.js:16
 msgid "You are already running Endless OS from live media"
-msgstr ""
+msgstr "Ya estás ejecutando Endless OS desde un DVD o USB"
 
 #: ../src/replacements.js:19
 msgid "Reformat with Endless OS"
-msgstr ""
+msgstr "Formatear con Endless OS"
 
 #: ../src/replacements.js:20
 msgid ""
 "You can reformat your computer with Endless OS. If you have Windows "
 "installed and want to keep it, reboot to Windows and run the Endless "
 "Installer under Windows."
-msgstr ""
+msgstr "Puedes formatear tu computadora con Endless OS. Si ya tienes Windows instalado y deseas mantenerlo, reinicia tu computadora a Windows y ejecuta el Instalador para Endless bajo Windows."
 
 #: ../src/replacements.js:33 ../src/replacements.js:90
 msgid "Spotify"
@@ -134,7 +135,7 @@ msgstr "Apple iTunes"
 
 #: ../src/replacements.js:91
 msgid "Spotify is a streaming music service"
-msgstr ""
+msgstr "Spotify es un servicio de transmisión de música"
 
 #: ../src/replacements.js:99 ../src/replacements.js:102
 #: ../src/replacements.js:125 ../src/replacements.js:147
@@ -144,7 +145,7 @@ msgstr "VLC"
 #: ../src/replacements.js:103 ../src/replacements.js:126
 #: ../src/replacements.js:148
 msgid "VLC is a media player that can play most media files"
-msgstr ""
+msgstr "VLC es un reproductor que es compatible con la mayoría de  archivos de multimedia"
 
 #: ../src/replacements.js:111 ../src/replacements.js:114
 msgid "FrostTorrent"
@@ -152,11 +153,11 @@ msgstr "FrostTorrent"
 
 #: ../src/replacements.js:115
 msgid "FrostTorrent is a file-sharing application like LimeWire"
-msgstr ""
+msgstr "FrostTorrent es un programa para compartir archivos, como LimeWire"
 
 #: ../src/replacements.js:122
 msgid "K-Lite Mega Codec Pack"
-msgstr ""
+msgstr "Mega paquete de codecs para K-Lite"
 
 #: ../src/replacements.js:133
 msgid "uTorrent"
@@ -168,11 +169,11 @@ msgstr "Transmission"
 
 #: ../src/replacements.js:137
 msgid "Transmission is a BitTorrent client, like uTorrent"
-msgstr ""
+msgstr "Transmisión es un cliente para BitTorrent, como uTorrent"
 
 #: ../src/replacements.js:144
 msgid "DivX Codecs"
-msgstr ""
+msgstr "Codecs DivX"
 
 #: ../src/replacements.js:155
 msgid "LINE"
@@ -180,13 +181,13 @@ msgstr "LINE"
 
 #: ../src/replacements.js:157
 msgid "You can install and use LINE through the Google Chrome Web Store"
-msgstr ""
+msgstr "Puedes instalar y utilizar LINE a través de la tienda web de Google Chrome"
 
 #: ../src/replacements.js:164
 msgid ""
 "But do not worry. With Endless OS you are already safe from viruses that "
 "only affect Windows"
-msgstr ""
+msgstr "Pero no te preocupes. Usar Endless OS te protege de los virus que sólo afectan a Windows."
 
 #: ../src/replacements.js:171
 #, javascript-format
@@ -194,12 +195,12 @@ msgid ""
 "Adobe Flash is downloaded and installed automatically by your browser on "
 "Endless OS. Please visit %s to check whether it has been installed correctly"
 " and contact the %s for support if you still have problems"
-msgstr ""
+msgstr "Adobe Flash se descarga e instala automáticamente por tu navegador en Endless OS. Por favor visita %s para comprobar si se ha instalado correctamente y contacta el %s para recibir ayuda si todavía te encuentras con problemas."
 
 #: ../src/replacements.js:171
 msgid "the Adobe Flash test page"
-msgstr ""
+msgstr "la página para probar Adobe Flash"
 
 #: ../src/replacements.js:171
 msgid "Endless OS Community"
-msgstr ""
+msgstr "Comunidad de Endless"
