--- a/po/nl.po
+++ b/po/nl.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Heimen Stoffels <vistausss@outlook.com>, 2018
+# Heimen Stoffels <vistausss@outlook.com>, 2018-2019
 msgid ""
 msgstr ""
 "Project-Id-Version: eos-gates\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-31 17:28+0100\n"
-"PO-Revision-Date: 2019-05-31 16:30+0000\n"
-"Last-Translator: Will Thompson <wjt@endlessm.com>\n"
+"PO-Revision-Date: 2019-05-31 18:41+0000\n"
+"Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
 "Language-Team: Dutch (http://www.transifex.com/endless-os/eos-gates/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -195,18 +195,18 @@ msgstr "Endless-gemeenschap"
 
 #: ../src/replacements.js:165
 msgid "Microsoft Windows"
-msgstr ""
+msgstr "Microsoft Windows"
 
 #: ../src/replacements.js:168
 msgid "GNOME Boxes"
-msgstr ""
+msgstr "GNOME Boxes"
 
 #: ../src/replacements.js:169
 msgid ""
 "GNOME Boxes is a Virtual Machine where you can install Microsoft Windows and"
 " run it alongside Endless OS"
-msgstr ""
+msgstr "GNOME Boxes is een virtuele machine waarin je Microsoft Windows kunt installeren en naast Endless OS kunt gebruiken"
 
 #: ../src/replacements.js:177
 msgid "Minecraft"
-msgstr ""
+msgstr "Minecraft"
