--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: eos-gates\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-31 17:28+0100\n"
-"PO-Revision-Date: 2019-05-31 16:30+0000\n"
-"Last-Translator: Will Thompson <wjt@endlessm.com>\n"
+"PO-Revision-Date: 2019-06-06 19:26+0000\n"
+"Last-Translator: Leandro Stanger <leandrostanger@hotmail.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/endless-os/eos-gates/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -60,12 +60,12 @@ msgstr "Central de Aplicativos"
 #: ../src/eos_gates.js:144
 #, javascript-format
 msgid "However, you already have %s installed"
-msgstr "No entanto, você já tem %sinstalado"
+msgstr "No entanto, você já tem %s instalado"
 
 #: ../src/eos_gates.js:146
 #, javascript-format
 msgid "However, you can install %s on the Endless App Center"
-msgstr "No entanto, você poderá instalar %sna Central de Aplicativos do Endless"
+msgstr "No entanto, você poderá instalar %s na Central de Aplicativos do Endless"
 
 #: ../src/eos_gates.js:173
 #, javascript-format
@@ -75,7 +75,7 @@ msgstr "%s não é suportado"
 #: ../src/eos_gates_linux_package.js:23
 #, javascript-format
 msgid "Sorry, you can't install %s on Endless."
-msgstr "Infelizmente, não é possível instalar %sno Endless."
+msgstr "Infelizmente, não é possível instalar %s no Endless."
 
 #: ../src/eos_gates_windows.js:76
 #, javascript-format
@@ -199,18 +199,18 @@ msgstr "Comunidade Endless"
 
 #: ../src/replacements.js:165
 msgid "Microsoft Windows"
-msgstr ""
+msgstr "Microsoft Windows"
 
 #: ../src/replacements.js:168
 msgid "GNOME Boxes"
-msgstr ""
+msgstr "Caixas GNOME"
 
 #: ../src/replacements.js:169
 msgid ""
 "GNOME Boxes is a Virtual Machine where you can install Microsoft Windows and"
 " run it alongside Endless OS"
-msgstr ""
+msgstr "Caixas GNOME é uma máquina virtual onde você pode instalar o Microsoft Windows e executá-lo junto com o Endless OS"
 
 #: ../src/replacements.js:177
 msgid "Minecraft"
-msgstr ""
+msgstr "Minecraft"
